[package]
name = "ptraf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
anyhow = "1.0.68"
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
bytes = "1.4"

ptraf-common = { path = "../ptraf-common", features = ["user"] }
dashmap = "5.4"
fxhash = "0.2"
humansize = "2.1.3"

[[bin]]
name = "ptraf"
path = "src/main.rs"
