[package]
name = "ptraf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]

# remote
anyhow = "1.0.68"
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
bytes = "1.4"
clap = { version = "4.1", features = ["derive"] }
dashmap = "5.4"
env_logger = "0.10"
fxhash = "0.2"
humansize = "2.1"
log = "0.4"
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }

# local
ptraf-common = { path = "../ptraf-common", features = ["user"] }

[[bin]]
name = "ptraf"
path = "src/main.rs"
