[package]
name = "ptraf"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
# local
ptraf-common = { path = "../ptraf-common", features = ["user"] }

# remote
anyhow = "1.0.68"
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
bytes = "1.4"
clap = { version = "4.1", features = ["derive"] }
crossterm = { version = "0.25", features = ["event-stream", "futures-core"] } # tui version
dashmap = "5.4"
dns-lookup = "1.0.8"
env_logger = "0.10"
futures = "0.3.26"
fxhash = "0.2"
human-repr = "1.0.1"
humansize = "2.1"
interp = "1.0.1"
log = { version = "0.4", features = ["std"] }
procfs = "0.15.1"
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread", "net", "signal", "sync", "time"] }
tui = "0.19"

[[bin]]
name = "ptraf"
path = "src/main.rs"
